trying to fix margin error on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+body {
+  width: 100%;
+}
+
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
